--- a/config-data/product-service.yml
+++ b/config-data/product-service.yml
@@ -1,11 +1,11 @@
 spring:
   application:
-    name: service-product
+    name: product-service
   datasource:
     driver-class-name: org.h2.Driver
     username: a
     password: a
-    url: "jdbc:h2:mem:service_product;DB_CLOSE_ON_EXIT=FALSE"
+    url: "jdbc:h2:mem:product_service;DB_CLOSE_ON_EXIT=FALSE"
   h2:
     console:
       enabled: true
